--- a/html5up-forty/solutions.html
+++ b/html5up-forty/solutions.html
@@ -156,7 +156,7 @@
 
         </section>
 
-        <section id="two guts" class="spotlights flex-all-section">
+        <section id="two guts" class="spotlights flex-all-section" style="margin-top: 3%;">
             <section class="section-flex-left">
 
                 <div class="flex-section">
