--- a/html5up-forty/solutions3.html
+++ b/html5up-forty/solutions3.html
@@ -148,7 +148,7 @@
 
         </section>
 
-        <section id="two guts" class="spotlights flex-all-section">
+        <section id="two guts" class="spotlights flex-all-section" style="margin-top: 3%;">
             <section class="section-flex-left">
 
                 <div class="flex-section">
@@ -162,7 +162,7 @@
                         
                         <header class="major">
                             <a rel="noopener noreferrer">
-                                <h3 style="text-align: center;">3D Experience</h3>
+                                <h3 style="text-align: center;">Collaboration with 3D , video and chat</h3>
                             </a>
                         </header>
                         <p>
