--- a/html5up-forty/solutions3.html
+++ b/html5up-forty/solutions3.html
@@ -154,7 +154,7 @@
                 <div class="flex-section">
 
                     <div class="section-left-image">
-                        <img class="image" src="images/SalesPitch2-1.jpg" alt=""
+                        <img class="image" src="images/collaboration-3d.png" alt=""
                             data-position="center center" />
 
                     </div>
